tests/good/core022.lat
int main() {
    int x;
    printInt(x);
    return 0;
}
