tests/bad/bad015.lat
// passing string to printInt().

int main() {
	printInt("foo");
	return 0 ;
}
